# tallerprog_tp

./: CMakeLists.txt  README.md  install.sh  install_sdl_qt.sh
client/: AK47Ammo.cpp  AK47Ammo.h  CowboyPistol.cpp  CowboyPistol.h  CowboyPistolAmmo.cpp  CowboyPistolAmmo.h  DuelPistol.h  DuelPistolAmmo.cpp  DuelPistolAmmo.h  Magnum.cpp  Magnum.h  MagnumAmmo.cpp  MagnumAmmo.h  ammo.cpp  bullet.h  caja.h  character.cpp  character.h  client.cpp  client.h  client_client.cpp  client_event_listener.cpp  client_exceptions.h  client_local_player.cpp  client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_renderer.cpp  client_sender.cpp  client_sender.h  color.h  coordinates.h  display.h  event_listener.h  explosion.h  gun.cpp  gun.h  item_box.cpp  item_box.h  (+10 more)
client/client_comms/: client_protocol.cpp  client_protocol.h  client_receiver.cpp  client_receiver.h  client_sender.cpp  client_sender.h
client/client_threads/: event_listener.cpp  event_listener.h  renderer.cpp  renderer.h  updater.cpp  updater.h
client/lobby/: CMakeLists.txt  lobby.cpp  lobby.h  lobby.ui  main.cpp
common/: color.h  drawingdata.h  gameaction.h  gamedata.h  gamestate.h  liberror.h  map_entity.cpp  map_entity.h  message.cpp  message.h  rectangulo.h  resolvererror.h  socket.h
common/comms/: protocol.cpp  protocol.h  receiver.cpp  receiver.h  sender.cpp  sender.h
common/hands_on_sockets/: liberror.cpp  liberror.h  resolver.cpp  resolver.h  socket.cpp  socket.h
common/hands_on_threads/: queue.h  thread.h
mapas/: laguna.yaml
resources/: config_guns.yaml  current_map.yaml  mapa_1.yaml  mapa_azul.yaml  mapa_ciudad.yaml  mapa_desierto.yaml  mapa_laguna.yaml  mapa_minecraft.yaml  terrain_config.yaml  variables_globales
server/: AK47.cpp  AK47.h  AK47Ammo.h  Armor.cpp  Armor.h  CowboyPistol.cpp  CowboyPistol.h  CowboyPistolAmmo.cpp  CowboyPistolAmmo.h  DuelPistol.cpp  DuelPistol.h  DuelPistolAmmo.cpp  Helmet.cpp  Helmet.h  Magnum.cpp  Magnum.h  MagnumAmmo.cpp  MagnumAmmo.h  SpawnPlace.cpp  SpawnPlace.h  acceptor.h  ammo.h  cleaner.h  command.h  duck.cpp  duck.h  gameplay.h  gun.cpp  gun.h  item.cpp  item.h  main.cpp  match.cpp  match.h  monitored_list.cpp  monitored_list.h  player.cpp  player.h  server.cpp  server.h  (+18 more)
server/server_comms/: server_protocol.cpp  server_protocol.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h
server/server_guns/: AK47.cpp  AK47.h  AK47Ammo.cpp  AK47Ammo.h  Banana.cpp  Banana.h  BananaPeel.h  ConfigGuns.h  CowboyPistol.cpp  CowboyPistol.h  CowboyPistolAmmo.cpp  CowboyPistolAmmo.h  DuelPistol.cpp  DuelPistol.h  DuelPistolAmmo.cpp  DuelPistolAmmo.h  Grenade.cpp  Grenade.h  LaserRifle.cpp  LaserRifle.h  LaserRifleAmmo.cpp  LaserRifleAmmo.h  Magnum.cpp  Magnum.h  MagnumAmmo.cpp  MagnumAmmo.h  PewPewLaser.cpp  PewPewLaser.h  PewPewLaserAmmo.cpp  PewPewLaserAmmo.h  Shotgun.cpp  Shotgun.h  ShotgunAmmo.cpp  ShotgunAmmo.h  Sniper.cpp  Sniper.h  SniperAmmo.cpp  SniperAmmo.h  SpawnPlace.cpp  SpawnPlace.h  (+6 more)
server/server_threads/: acceptor.cpp  acceptor.h  cleaner.cpp  cleaner.h  gameplay.cpp  gameplay.h  match_manager.cpp  match_manager.h
tests/: CMakeLists.txt  client_to_server_tests.cpp  foo.cpp  main.cpp  mock_socket.h  protocol_test.h  server_to_client_tests.cpp  socket_interface.h  test_acceptor_thread.h  test_client_protocol.cpp
